name:                discovery 
version:             0.0.1
synopsis:            Service discovery and heartbeat utilities
description:         Package for simple network service discovery 
license:             BSD3
license-file:        LICENSE
author:              Alexander Vershilov
maintainer:          alexander.vershilov@gmail.com
-- copyright:           
category:            Network
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     Network.Discovery
  ghc-options:         -Wall
  -- other-modules:       
  build-depends:       base, 
                       binary >=0.5 && <0.7, 
                       bytestring >=0.9 && <0.11, 
                       time ==1.4.*, 
                       network ==2.4.*,
                       system-time-monotonic == 0.2.*

